--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- RUNTIME CONFIG SCRIPT -->
+    <script src="%PUBLIC_URL%/config.js"></script>
+
     <div id="loader"></div>
     <div id="root"></div>
   </body>
